edit delete functionality

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
- "scripts": {
+  "scripts": {
     "dev": "nodemon src/server.ts",
     "build": "npx prisma generate && tsc",
     "start": "node dist/server.js"
@@ -12,6 +12,7 @@
     "@prisma/client": "^6.4.1",
     "apollo-server-express": "^3.13.0",
     "bcryptjs": "^3.0.2",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "graphql": "^16.10.0",
     "jsonwebtoken": "^9.0.2"
